fix(moves-scroll): decrease the width of the moves list scrollbar

--- a/pokemon-app/src/styles/MovesList.css
+++ b/pokemon-app/src/styles/MovesList.css
@@ -343,4 +343,9 @@
     top: 575%;
     left: 75%;
   }
+
+  .moves-box::-webkit-scrollbar,
+  .enemy-moves-box::-webkit-scrollbar {
+    width: 6.6px;
+  }
 }
